--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "cleardbs": "node ./utils/cleardbs.js",
+    "seeddbs": "node ./utils/seeddbs.js",
+    "debug": "DEBUG=shopify-node-app:* npm start",
+    "debugwatch": "DEBUG=shopify-node-app:* npm watch",
+    "watch": "nodemon ./bin/www",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -19,6 +24,7 @@
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "nodemon": "^1.11.0"
   }
 }
