--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "express": "~4.14.1",
     "hbs": "~4.0.1",
     "mongoose": "^4.9.3",
