--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "cleardbs": "node ./utils/cleardbs.js",
-    "seeddbs": "node ./utils/seeddbs.js",
     "debug": "DEBUG=shopify-node-app:* npm start",
     "debugwatch": "DEBUG=shopify-node-app:* npm watch",
+    "test": "mocha test/**/*.test.js",
     "watch": "nodemon ./bin/www",
     "start": "node ./bin/www"
   },
@@ -19,13 +18,18 @@
     "hbs": "~4.0.1",
     "mongoose": "^4.9.3",
     "morgan": "~1.7.0",
+    "pg": "^6.2.4",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.1.0",
     "serve-favicon": "~2.3.2",
     "shopify-node-api": "^1.7.6"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
   }
 }
