--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "seeddbs": "node ./utils/seeddbs.js",
     "debug": "DEBUG=shopify-node-app:* npm start",
     "debugwatch": "DEBUG=shopify-node-app:* npm watch",
-    "watch": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "watch": "nodemon ./start.js",
+    "start": "node ./start.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.1",
+    "express-sessions": "^1.0.6",
     "hbs": "~4.0.1",
     "mongoose": "^4.9.3",
     "morgan": "~1.7.0",
