--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "debug": "~2.6.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.1",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.0.6",
     "hbs": "~4.0.1",
     "mongoose": "^4.9.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
-    "shopify-node-api": "^1.7.6"
+    "shopify-node-api": "^1.7.6",
+    "throng": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
